force-app/main/default/objects/Credentials_api_2__c/Credentials_api_2__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Credentials2</label>
</CustomObject>