force-app/main/default/objects/Credentials_api_2__c/fields/login__c.field-meta.xml
<CustomField>
    <fullName>login__c</fullName>
    <label>client_id</label>
    <length>150</length>
    <type>Text</type>
</CustomField>