force-app/main/default/objects/Credentials_api_2__c/fields/password__c.field-meta.xml
<CustomField>
    <fullName>password__c</fullName>
    <label>password</label>
    <length>150</length>
    <type>Text</type>
</CustomField>